// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SimpleRecord normalize should deserialize Date 1`] = `
{
  "entities": {
    "ArticleEntity": {
      "5": ArticleEntity {
        "author": "",
        "content": "",
        "id": "5",
        "title": "",
      },
    },
  },
  "entityMeta": {
    "ArticleEntity": {
      "5": {
        "date": 1557831718135,
        "expiresAt": Infinity,
        "fetchedAt": 0,
      },
    },
  },
  "indexes": {},
  "result": {
    "createdAt": 2020-06-07T02:00:15.000Z,
    "nextPage": "blob",
    "requiredArticle": "5",
  },
}
`;

exports[`SimpleRecord normalize should use default when Date not provided 1`] = `
{
  "entities": {
    "ArticleEntity": {
      "5": ArticleEntity {
        "author": "",
        "content": "",
        "id": "5",
        "title": "",
      },
    },
  },
  "entityMeta": {
    "ArticleEntity": {
      "5": {
        "date": 1557831718135,
        "expiresAt": Infinity,
        "fetchedAt": 0,
      },
    },
  },
  "indexes": {},
  "result": {
    "nextPage": "blob",
    "requiredArticle": "5",
  },
}
`;

exports[`SimpleRecord normalize should work on nested 1`] = `
{
  "entities": {
    "ArticleEntity": {
      "5": ArticleEntity {
        "author": "5",
        "content": "",
        "id": "5",
        "title": "happy",
      },
    },
  },
  "entityMeta": {
    "ArticleEntity": {
      "5": {
        "date": 1557831718135,
        "expiresAt": Infinity,
        "fetchedAt": 0,
      },
    },
  },
  "indexes": {},
  "result": {
    "data": "5",
    "lastPage": "abc",
    "nextPage": "slksfd",
  },
}
`;
